# polaris

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  delete-merged-branches.yml  release.yml
docs/: README.md  architecture.md  cli.md  code-rules.md  configuration.md  database.md  development.md  embedding.md  indexing.md  mcp-server.md  migration.md  multi-tenant.md  overview.md  search.md  todos.md
docs/superpowers/plans/: 2026-05-07-savings-command.md  2026-05-08-global-embedding-cache.md  2026-05-08-setup-agents-instructions.md
docs/superpowers/specs/: 2026-05-07-savings-command-design.md  2026-05-08-global-embedding-cache-design.md  2026-05-08-setup-agents-instructions-design.md
polaris-cli/: Cargo.toml
polaris-cli/src/: hook.rs  lib.rs  main.rs  savings.rs  setup.rs  tui.rs  update.rs  update_check.rs
polaris-cli/src/mcp/: mod.rs  server.rs  types.rs
polaris-cli/tests/: lib_entrypoint.rs
polaris-core/: Cargo.toml
polaris-core/src/: bank.rs  config.rs  db.rs  embedding.rs  error.rs  indexer.rs  lib.rs  paths.rs  search.rs
polaris-core/tests/: bank_basic.rs  bank_index_diff.rs  bank_set_search.rs  index_documents.rs  purge_safety.rs
src/: config.rs  db.rs  embedding.rs  error.rs  indexer.rs  main.rs  search.rs
src/mcp/: mod.rs  server.rs
