[package]
name = "polaris"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[[bin]]
name = "polaris"
path = "src/main.rs"

[dependencies]
fastembed = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.7", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1"
pulldown-cmark = "0.12"
walkdir = "2"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
hex = "0.4"
dirs = "5"
anyhow = "1"
indicatif = "0.17"
rayon = "1"
console = "0.15"

[dev-dependencies]
tempfile = "3"
