[workspace]
members = ["polaris-core", "polaris-cli"]
resolver = "2"

[workspace.package]
version = "2.1.0"
edition = "2024"
rust-version = "1.87"

[workspace.dependencies]
# Shared dependency versions
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
