[workspace]
resolver = "2"
members = ["polaris-cli", "polaris-core"]

[workspace.package]
version = "2.2.3"
edition = "2024"
rust-version = "1.87"

[workspace.dependencies]
# Shared dependency versions
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
