[package]
name = "polaris-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Lightweight RAG CLI + MCP server (Polaris)"
license = "MIT"

[[bin]]
name = "polaris"
path = "src/main.rs"

[dependencies]
polaris-core = { path = "../polaris-core" }

# CLI-specific
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

# MCP server
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1"

# Watcher (CLI-only in Phase 1)
notify-debouncer-mini = "0.4"

# Self-update (GitHub Releases backend, rustls TLS)
self_update = { version = "0.44", default-features = false, features = ["reqwest", "rustls"] }

# Platform cache dir for the update-check cache (already used by polaris-core)
dirs = "5"

# POSIX-shell quoting/splitting for the Claude Code hook command string
# (must survive binary paths with spaces and round-trip through `is_polaris_owned`)
shell-words = "1.1"

# Async + logging
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Pulled through but already present transitively via polaris-core
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
